# pitch-perfecter

./: .gitignore  ANALYSIS_REPORT.md  AUDIO_MODULE_COMPARISON.md  Cargo.toml  README.md  SECURITY_SUMMARY.md  fn white_noise(sample_rate: f32, duration_sec: f32, amplitude: f32) -> Vec<f32>;  sound_synth_expectations.md  sound_synth_expectations_minimized.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
crates/audio-cleaning/: Cargo.toml  PLAN.md  README.md
crates/audio-utils/: Cargo.toml
crates/gui/: Cargo.toml  GUI_MOCKUP.md  IMPLEMENTATION_NOTES.md  README.md  TESTING.md  USAGE.md
crates/gui/src/: audio_recorder.rs  learning_pane.rs  lib.rs  main.rs  pitch_processor.rs
crates/gui/tests/: profile_management_test.rs
crates/learning-tools/: Cargo.toml  IMPLEMENTATION.md
crates/pitch-detection/: Cargo.toml
crates/playground/: Cargo.toml
crates/playground/examples/: audio_file_io_demo.rs  filtering_comparison_demo.rs  list_audio_devices.rs  pitch_detection_with_cleaning.rs  record_from_microphone.rs  record_noise_and_clean.rs  toggle_recording.rs
crates/playground/src/: lib.rs
docs/: LATENCY_TRACKING.md
src/: audio.rs  audio_analysis.rs  audio_controls.rs  audio_helpers.rs  gui.rs  lib.rs  main.rs  music_notation.rs  pitch_detection.rs  playback_control.rs  recording_control.rs  signal_cleaning.rs  signal_processing.rs  strided_chunks.rs  track_pitch.rs  voice_synth.rs
src/audio/: mod.rs  types.rs
tests/: audio_helpers.rs  audio_helpers_tests.rs  pitch_detection_tests.rs  test_pitch_detection_with_signal_cleaning_integration.rs
(+49 files in other folders)
