[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_voice_like"
path = "src/bin/gen_voice_like.rs"

[dependencies]
audio-utils = { path = "../audio-utils" }
audio-cleaning = { path = "../audio-cleaning" }
pitch-detection-utils = { path = "../pitch-detection" }
learning-tools = { path = "../learning-tools" }
hound = "3.5.1"
rand = "0.9.2"
